# git

./: Cargo.toml  Makefile  meson.build  object-name.c  odb.c  odb.h  packfile.c  unpack-trees.c
Documentation/: BreakingChanges.adoc  git-checkout.adoc
builtin/: sparse-checkout.c
chapters/: chap08.ipynb
ci/: install-dependencies.sh
src/: meson.build  varint.rs
t/: t0613-reftable-write-options.sh
